# SCSimulation

./: .gitignore  CMakeLists.txt  SCSimulation.sln
SCSimulation/: BasicCombinatorial.cu  BasicCombinatorial.cuh  CircuitComponent.cu  CircuitComponent.cuh  CombinatorialComponent.cu  CombinatorialComponent.cuh  ComponentTypes.h  Delay.cuh  DeviceSim.cu  InverterTestbench.cuh  LFSR.cuh  MuxNTestbench.cuh  Range.h  SCSimulation.vcxproj  SCSimulation.vcxproj.filters  SequentialComponent.cu  SequentialComponent.cuh  SquarerTestbench.cuh  Stanh.cu  Stanh.cuh  StochasticCircuit.cu  StochasticCircuit.cuh  StochasticCircuitFactory.cu  StochasticCircuitFactory.cuh  StochasticNumber.cu  StochasticNumber.cuh  Testbench.cuh  circuit_component_defines.cuh  cuda_base.cuh  curand_base.cuh  dll.h  example_kernel.cu  main.cu  main_old.cu  postbuild.bat
SCSimulationLib/: AsapScheduler.cu  AsapScheduler.cuh  BasicCombinatorial.cu  BasicCombinatorial.cuh  Btanh.cu  Btanh.cuh  CMakeLists.txt  CircuitComponent.cu  CircuitComponent.cuh  CombinatorialComponent.cu  CombinatorialComponent.cuh  Graph.cpp  Graph.h  HostAsapScheduler.cpp  HostAsapScheduler.h  LFSR.cu  LFSR.cuh  MaxApprox.cu  MaxApprox.cuh  ParallelCounter.cu  ParallelCounter.cuh  Range.h  SCSimulationLib.vcxproj.filters  Schedule.cpp  Schedule.h  Scheduler.h  SequentialComponent.cuh  Stanh.cu  Stanh.cuh  StochasticCircuit.cu  StochasticCircuit.cuh  StochasticCircuitFactory.cu  StochasticCircuitFactory.cuh  StochasticNumber.cu  StochasticNumber.cuh  circuit_component_defines.cuh  cuda_base.cuh  curand_base.cuh
SCSimulationTestbench/: BinaryDoubleReader.cpp  BinaryDoubleReader.h  BitwiseAbleComponents.cuh  CMakeLists.txt  CNNTestbench.cuh  ChainedInverterTestbench.cuh  ConvolutionLayer.cuh  CycleTestbench.cuh  FCLayer.cuh  InverterTestbench.cuh  MLPLayerCountTestbench.cuh  MLPLayerSizeTestbench.cuh  MLPTestbench.cuh  MaxPoolLayer.cuh  MuxNTestbench.cuh  NumericCSVReader.cpp  NumericCSVReader.h  PCBTanhTestbench.cuh  PCBtanhTestbench.cuh  SCSimulationTestbench.vcxproj  SCSimulationTestbench.vcxproj.filters  SoftwareFCLayer.h  SquarerTestbench.cuh  StanhTestbench.cuh  Testbench.cuh  main.cu  main_old.cu
python_ml/: cnn.py
